// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewTemplateDetails component matches not yet submitted snapshot 1`] = `
<DocumentFragment>
  <h1
    class="preview__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Channel template
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag"
          >
            Not yet submitted
          </strong>
        </dd>
      </div>
    </dl>
    <dl
      class="nhsuk-summary-list preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          <div
            data-testid="preview__heading-0"
            id="preview-heading-heading"
          >
            Heading
          </div>
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="preview__content"
            data-testid="preview__content-0"
            id="preview-content-heading"
          >
            Test value-1
          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetails component matches submitted snapshot 1`] = `
<DocumentFragment>
  <h1
    class="preview__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Channel template
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
          >
            Submitted
          </strong>
        </dd>
      </div>
    </dl>
    <dl
      class="nhsuk-summary-list preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          <div
            data-testid="preview__heading-0"
            id="preview-heading-heading"
          >
            Heading
          </div>
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="preview__content"
            data-testid="preview__content-0"
            id="preview-content-heading"
          >
            Test value-1
          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetails component renders letter template when testDataCsv is not present 1`] = `
<DocumentFragment>
  <h1
    class="preview__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Letter - French
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
          >
            Submitted
          </strong>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.pdf
            </p>
          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetails component renders letter template when testPersonalisationInputFile is set 1`] = `
<DocumentFragment>
  <h1
    class="preview__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Letter - French
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
          >
            Submitted
          </strong>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.pdf
            </p>
          </div>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Test personalisation file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.csv
            </p>
          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetails component renders without content preview 1`] = `
<DocumentFragment>
  <h1
    class="preview__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Channel template
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
          >
            Submitted
          </strong>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Meta
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <p>
            metadata
          </p>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
